# law-qa-rag

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  settings.yaml
.github/workflows/: ci.yml
docs/: 1_parsing.md  2_chunking.md  3_load_corpus.md  4_embed_chunks.md  5_generation.md  6_web_prototype.md  7_evaluation.md
eval/: categories.md  eval_questions.jsonl  generation_review_sample.jsonl  gold_labels.jsonl  gold_resolved.jsonl  questions_seed.md
eval/results/generation/: config_snapshot.yaml  generation_all_v1.csv  generation_all_v1.jsonl
eval/results/retrieval/: config_snapshot.yaml  error_analysis.csv  retrieval_runs.jsonl  summary_metrics.csv
migrations/: 001_answers_web_fields.sql  001_init.sql  010_seed_demo_data.sql
scripts/: build_fz_manifest.py  build_manifest.py  debug_hybrid_search.py  parse_docs.py
scripts/db/: apply_migration.py
scripts/debug/: check_gigachat.py  count_answer_tokens.py  debug_dense_search.py  debug_hybrid_search.py  debug_sparse_search.py  generate_answer.py
scripts/eval/: resolve_gold_chunks.py  run_generation_eval.py  run_retrieval_eval.py
scripts/pipeline/: chunk_json.py  embed_chunks.py  load_corpus.py  parse_docs.py
sql/init/: 001_schema.sql
sql/migrations/: 002_auth_feedback.sql
src/law_qa_rag/: __init__.py  config.py  env.py  generation.py  persistence.py  prompting.py  retrieval.py
src/law_qa_rag/llm/: __init__.py  (+2 more)
tests/: test_apply_migration.py  test_block5_generation.py  test_chunk_json.py  test_debug_dense_search.py  test_debug_hybrid_search.py  test_debug_sparse_search.py  test_embed_chunks.py  test_env.py  test_load_corpus.py  test_parse_docs.py  test_persistence.py  test_web_app.py
(+14 files in other folders)
