[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "law-qa-rag"
version = "0.1.0"
description = "RAG system for QA over Russian federal laws"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14",
    "lxml>=6.1",
    "PyYAML>=6.0",
    "transformers>=5.7",
    "psycopg[binary]>=3.3.4",
    "sentence-transformers",
    "torch",
    "numpy",
    "gigachat",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "python-dotenv",
    "httpx",
    "itsdangerous",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"law_qa_rag.web" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]
